// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<split> demo: > render [basic] correctly 1`] = `
<div>
  <div class="sd-split sd-split-horizontal sd:h-50 sd:w-full sd:min-w-125 sd:border sd:border-solid" style="border-color: var(--sd-color-border);">
    <div class="sd-split-pane sd-split-pane-first" style="flex: 0 0 calc(50% - 0px);">
      <div class="sd-typography">Left
        <!---->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
    </div>
    <div class="sd-split-trigger sd-split-trigger-vertical">
      <!-- @slot 自定义内容 -->
      <div class="sd-split-trigger-icon-wrapper">
        <!-- @slot 自定义 icon --><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-drag-dot-vertical sd-split-trigger-icon" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path fill="currentColor" stroke="none" d="M17 8h2v2h-2zM17 23h2v2h-2zM17 38h2v2h-2zM29 8h2v2h-2zM29 23h2v2h-2zM29 38h2v2h-2z"></path>
          <path d="M17 8h2v2h-2zM17 23h2v2h-2zM17 38h2v2h-2zM29 8h2v2h-2zM29 23h2v2h-2zM29 38h2v2h-2z"></path>
        </svg>
      </div>
    </div>
    <div class="sd-split-pane sd-split-pane-second">
      <div class="sd-typography">Right
        <!---->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
    </div>
  </div>
</div>
`;

exports[`<split> demo: > render [nested] correctly 1`] = `
<div>
  <div class="sd-split sd-split-horizontal sd:h-50 sd:w-full sd:min-w-125 sd:border sd:border-solid" style="border-color: var(--sd-color-border);">
    <div class="sd-split-pane sd-split-pane-first" style="flex: 0 0 calc(50% - 0px);">
      <div class="sd-typography">Left
        <!---->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
    </div>
    <div class="sd-split-trigger sd-split-trigger-vertical">
      <!-- @slot 自定义内容 -->
      <div class="sd-split-trigger-icon-wrapper">
        <!-- @slot 自定义 icon --><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-drag-dot-vertical sd-split-trigger-icon" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path fill="currentColor" stroke="none" d="M17 8h2v2h-2zM17 23h2v2h-2zM17 38h2v2h-2zM29 8h2v2h-2zM29 23h2v2h-2zM29 38h2v2h-2z"></path>
          <path d="M17 8h2v2h-2zM17 23h2v2h-2zM17 38h2v2h-2zM29 8h2v2h-2zM29 23h2v2h-2zM29 38h2v2h-2z"></path>
        </svg>
      </div>
    </div>
    <div class="sd-split-pane sd-split-pane-second">
      <div>
        <div class="sd-split sd-split-vertical sd:h-50">
          <div class="sd-split-pane sd-split-pane-first" style="flex: 0 0 calc(50% - 0px);">
            <div class="sd-typography">Top
              <!---->
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
          <div class="sd-split-trigger sd-split-trigger-horizontal">
            <!-- @slot 自定义内容 -->
            <div class="sd-split-trigger-icon-wrapper">
              <!-- @slot 自定义 icon --><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-drag-dot sd-split-trigger-icon" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
                <path fill="currentColor" stroke="none" d="M40 17v2h-2v-2zM25 17v2h-2v-2zM10 17v2H8v-2zM40 29v2h-2v-2zM25 29v2h-2v-2zM10 29v2H8v-2z"></path>
                <path d="M40 17v2h-2v-2zM25 17v2h-2v-2zM10 17v2H8v-2zM40 29v2h-2v-2zM25 29v2h-2v-2zM10 29v2H8v-2z"></path>
              </svg>
            </div>
          </div>
          <div class="sd-split-pane sd-split-pane-second">
            <div class="sd-typography">Bottom
              <!---->
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
